# zttt-rs

./: .ai-context.md  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MIGRATION.md  PLANNING.md  README.md  clippy.toml  rustfmt.toml
.cargo/: config.toml
.github/: AI_CONVENTIONS.md  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DEVELOPMENT.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  copilot-instructions.md  rust-conventions.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
examples/: ai_game.rs  basic_game.rs  benchmark.rs  custom_engine.rs  fast_simulation.rs  perfect_engine.rs  perfect_simulation.rs  simulation.rs  simulation_module.rs  simulation_with_callback.rs
src/: board.rs  engine.rs  game.rs  lib.rs  player.rs
src/backend/: board.rs  engine.rs  game.rs  mod.rs
src/simulation/: CHANGELOG.md  README.md  USAGE.md  config.rs  mod.rs  result.rs  simulator.rs
