[package]
name = "zttt-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sumanth-NR"]
description = "A high-performance Rust backend for TicTacToe games with optimized AI"
license = "MIT"
repository = "https://github.com/Sumanth-NR/zttt-rs"
keywords = ["tictactoe", "game", "ai", "minimax"]
categories = ["games", "algorithms"]

[dependencies]

[dev-dependencies]
