[package]
name = "zttt-rs"
version = "0.1.0"
edition = "2021"
authors = ["Sumanth-NR"]
description = "The fastest and most optimized Rust backend for simulating TicTacToe games"
license = "MIT"
repository = "https://github.com/Sumanth-NR/zttt-rs"
keywords = ["tictactoe", "game", "simulation", "performance", "backend"]
categories = ["games", "algorithms", "simulation"]

[dependencies]

[dev-dependencies]
